# ProDesign

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  check_errors.txt  check_errors_2.txt  check_errors_2_utf8.txt  check_errors_utf8.txt  compile_errors.txt  compile_errors_utf8.txt  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.husky/: pre-commit
affiche/: Affiche de l'église.jfif  Birthday flier.jfif  Birthday flyer.jfif  Brand Flyer Design.jfif  Branding Packages.jfif  Brown 3D Maximalist Happy Birthday Template Social Media.jfif  Business flyer.jfif  Church Flyer Design (1).jfif  Church Flyer Design (2).jfif  Church Flyer Design (3).jfif  Church Flyer Design (4).jfif  Church Flyer Design.jfif  Church Flyers.jfif  Church Social Media flyers design - Aziable Josue.jfif  Course flyer.jfif  Creative Social Media Flyer Design.jfif  Depreambledesigns ✨⚡😎.jfif  Design.jfif  FLYER DESIGN.jfif  Facebook.jfif  Father's Day Packages.jfif  Graphic design Aderonke BELLO.jfif  Midnight Live- Church Design flyer - Social media.jfif  New Month Flyer Design.jfif  Power Ignition.jfif  SOCIAL MEDIA POSTER DESIGN PACKAGE.jfif  Social Media Ads Flyer Design.jfif  Social media designs.jfif  TIKTOK LIVE Design - Live event - Poadcast - church design.jfif  UI_UX Made Easy_ Foundations; FREE 3-Day YouTube Live Class!.jfif  Video Production Flyer.jfif  Welcome to May.jfif  church flyer design (5).jfif  communication digitale.jfif  (+8 more)
backend/: Cargo.toml  Dockerfile  cargo_errors.txt  cargo_errors_final.txt  cargo_errors_really_final.txt  check.txt
backend/assets/mockups/: billboard_bg.jfif  idcard_bg.jfif  storefront_bg.jfif
backend/src/: auth.rs  main.rs  models.rs
backend/src/services/: db.rs  storage.rs
src/: main.rs
video_engine/: Cargo.toml  Dockerfile  docker-compose.yml
video_engine/src/: ai_generator.rs  main.rs  music_library.rs  queue.rs  transcriber.rs  video.rs  wgpu_fx.rs
(+41 files in other folders)
