[package]
name = "pro-design-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.12"
ab_glyph = "0.2"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.13", features = ["v4"] }
# image est maintenant utilisé via printpdf::image_crate pour éviter les conflits de version
base64 = "0.21"
redis = { version = "0.23", features = ["tokio-comp"] } # Keep 0.23 for stability with Axum 0.7
qrcode = "0.14"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
printpdf = { version = "0.7", features = ["embedded_images"] }
reqwest = { version = "0.11", features = ["json"] } # Keep 0.11 for stability with Axum 0.7
textwrap = "0.16"
anyhow = "1.0"
time = "0.3.37"
jsonwebtoken = "10.0"
bcrypt = "0.15"
# time-core est verrouillé par la version de time ci-dessus
rand = "0.9"
regex = "1.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
rust-s3 = "0.34"
dotenvy = "0.15"
